cluster/monitoring/clamav/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: clamav
    app.kubernetes.io/version: 1.5.4-debian13-slim
  name: clamav
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: clamav
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clamav
        app.kubernetes.io/version: 1.5.4-debian13-slim
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - command:
        - /init-unprivileged
        image: clamav/clamav:1.5.4-debian13-slim
        name: clamav
        ports:
        - containerPort: 3310
          name: clamd
        volumeMounts:
        - mountPath: /var/lib/clamav
          name: database-volume
        - mountPath: /var/log/clamav
          name: log-volume
        resources:
          requests:
            cpu: 200m
            memory: 1536Mi
          limits:
            cpu: 2000m
            memory: 3Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: clamav-db-pvc
      - name: log-volume
        emptyDir: {}
