cluster/monitoring/clamav/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: clamav
    app.kubernetes.io/version: 1.5.4-debian13-slim
  name: clamav
spec:
  selector:
    app.kubernetes.io/name: clamav
  ports:
  - name: clamd
    port: 3310
    targetPort: 3310
