cluster/monitoring/clamav/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clamav-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: clamav
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: forgejo
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - forgejo-runner
          - forgejo-runner-1
          - forgejo-runner-2
    ports:
    - port: 3310
      protocol: TCP
